imported new components to app module

--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -49,3 +49,10 @@
     </div>
   </div>
 </nav>
+
+<app-about></app-about>
+<app-not-found></app-not-found>
+<app-album></app-album>
+<app-artist-discography></app-artist-discography>
+<app-new-releases></app-new-releases>
+Help me
