--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -49,10 +49,9 @@
     </div>
   </div>
 </nav>
-
-<app-about></app-about>
-<app-not-found></app-not-found>
-<app-album></app-album>
+<router-outlet></router-outlet>
+<!-- <app-about></app-about>
+<app-not-found></app-not-found> -->
 <app-artist-discography></app-artist-discography>
-<app-new-releases></app-new-releases>
-Help me
+<!-- <app-new-releases></app-new-releases>
+<app-album></app-album> -->
