--- a/My_Music_App/src/app/artist-discography/artist-discography.component.html
+++ b/My_Music_App/src/app/artist-discography/artist-discography.component.html
@@ -4,14 +4,12 @@
     <div class="row justify-content-center">
       <div class="card w-50 border-0">
         <div class="card-body">
-          <!--TODO: add routing -->
-          <a href="">
-            <img
-              src="{{ artist.images[0].url }}"
-              class="card-img-top"
-              alt="artist cover"
-          /></a>
-          <h5 class="card-title text-center mt-3">{{ artist.name }}</h5>
+          <img
+            src="{{ artist?.images[0].url }}"
+            class="card-img-top"
+            alt="artist cover"
+          />
+          <h5 class="card-title text-center mt-3">{{ artist?.name }}</h5>
         </div>
       </div>
     </div>
@@ -20,12 +18,15 @@
     <h1 class="p-1 text-center">Full Discography</h1>
 
     <div class="row">
-      <div class="col-sm-6 col-md-4 col-lg-3" *ngFor="let album of albums">
+      <div
+        class="col-sm-6 col-md-4 col-lg-3"
+        *ngFor="let album of albumsByArtist"
+      >
         <div class="card border-0">
           <div class="card-body">
             <!--TODO: add routing -->
 
-            <a href="">
+            <a routerLink="{{ album.id }}" routerActiveLink="active">
               <img
                 src="{{ album.images[0].url }}"
                 class="card-img-top"
