--- a/My_Music_App/src/app/artist-discography/artist-discography.component.html
+++ b/My_Music_App/src/app/artist-discography/artist-discography.component.html
@@ -26,7 +26,7 @@
           <div class="card-body">
             <!--TODO: add routing -->
 
-            <a routerLink="{{ album.id }}" routerActiveLink="active">
+            <a routerLink="/album/{{ album.id }}" routerActiveLink="active">
               <img
                 src="{{ album.images[0].url }}"
                 class="card-img-top"
