--- a/My_Music_App/src/app/album/album.component.scss
+++ b/My_Music_App/src/app/album/album.component.scss
@@ -1,3 +1,9 @@
 a {
   text-decoration: none;
 }
+
+audio {
+  filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
+  width: 200px;
+  height: 25px;
+}
