--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">My Spotify Music</a>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -13,7 +14,22 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul
+        class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end"
+        *ngIf="email"
+      >
+        <form class="d-flex" (ngSubmit)="handleSearch()">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+            name="searchString"
+            [(ngModel)]="searchString"
+          />
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -47,28 +63,36 @@
           </ul>
         </li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-      </ul>
-      <form class="d-flex" (ngSubmit)="handleSearch()">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-          name="searchString"
-          [(ngModel)]="searchString"
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-
-      <ul class="d-flex navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item" *ngIf="userName">
+        <!--if email is signed in, show email, else, show link to register component-->
+        <li class="nav-item">
           <a href="#" class="nav-link">
             <img src="../assets/images/person.svg" alt="person icon" />
-            {{ userName }}
+            {{ email }}
           </a>
         </li>
-        <li class="nav-item" *ngIf="userName">
-          <a href="#" class="nav-link">Log Out</a>
+        <!--if email is signed in, show log out link, else, show link to login component-->
+
+        <li class="nav-item">
+          <a class="nav-link" (click)="logout()">Log Out</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav w-100 justify-content-end" *ngIf="!email">
+        <li class="nav-item gap-2">
+          <a
+            routerLink="/login"
+            routerLinkActive="active"
+            class="btn btn-outline-dark me-2"
+          >
+            Sign In
+          </a>
+          <a
+            routerLink="/register"
+            routerLinkActive="active"
+            class="btn btn-outline-primary"
+          >
+            Sign Up
+          </a>
         </li>
       </ul>
     </div>
