--- a/My_Music_App/src/app/new-releases/new-releases.component.html
+++ b/My_Music_App/src/app/new-releases/new-releases.component.html
@@ -5,8 +5,7 @@
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div
-        class="card col-sm-6 col-md-4 col-lg-3"
-        style="width: 20rem"
+        class="card mt-3 col-sm-6 col-md-4 col-lg-3 border-0"
         *ngFor="let release of releases"
       >
         <!--TODO: add routing -->
