--- a/My_Music_App/src/app/album/album.component.html
+++ b/My_Music_App/src/app/album/album.component.html
@@ -1,8 +1,8 @@
 <section class="content">
-  <div class="container-fluid bg-light">
-    <div class="row justify-content-center bg-secondary">
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-center">
       <!--album info-->
-      <div class="card mt-5 border-0 bg-secondary">
+      <div class="card mt-5 border-0 bg-secondary col-sm-12 col-md-8">
         <img
           src="{{ album?.images[0].url }}"
           class="card-img-top mt-2"
@@ -30,82 +30,87 @@
       </div>
     </div>
     <!-- TRACKS sections -->
-    <div class="card mt-5 border-0 bg-light">
-      <h2 class="text-center">Tracks</h2>
-      <ul class="list-group">
-        <li
-          class="list-group-item d-flex border-0 bg-light"
-          *ngFor="let track of album?.tracks.items"
-        >
-          <div *ngIf="track.preview_url">
-            <audio [src]="track.preview_url" id="audio"></audio>
-          </div>
-          <!-- <button
+    <div class="row d-flex justify-content-center">
+      <div class="card mt-5 border-0 col-sm-12 col-md-8 col-lg-6">
+        <h2 class="text-center">Tracks</h2>
+        <ul class="list-group">
+          <li
+            class="list-group-item d-flex border-0"
+            *ngFor="let track of album?.tracks.items"
+          >
+            <div *ngIf="track.preview_url">
+              <audio [src]="track.preview_url" id="audio"></audio>
+            </div>
+            <!-- <button
             type="button"
             (click)="play(track.preview_url)"
-            class="w-100 bg-light border-0 text-start"
+            class="w-100  border-0 text-start"
           > -->
-          <div class="d-flex flex-column">
-            <p class="text-nowrap">
-              {{ track.name }}
-            </p>
-            <div class="d-flex gap-1">
-              <p
-                *ngFor="let artist of track.artists"
-                class="font-weight-light badge bg-secondary"
-              >
-                {{ artist.name }}
+            <div class="d-flex flex-column">
+              <p class="text-nowrap">
+                {{ track.name }}
               </p>
+              <div class="d-flex gap-1">
+                <p
+                  *ngFor="let artist of track.artists"
+                  class="font-weight-light badge bg-secondary"
+                >
+                  {{ artist.name }}
+                </p>
+              </div>
             </div>
-          </div>
 
-          <!--TODO play audio when song is clicked-->
-          <!--Add track to Favourites-->
-          <div
-            class="w-100 d-flex gap-1 justify-content-end align-items-center"
-          >
-            <a (click)="addToFavourites(track.id)" class="">
-              <img src="../../assets/images/heart.svg" alt="Favourite" />
-            </a>
-            <a (click)="play(track.preview_url)" class="">
-              <img
-                src="../../assets/images/play-circle-fill.svg"
-                alt="Favourite"
-              />
-            </a>
-            <a (click)="stop()" class="">
-              <img
-                src="../../assets/images/pause-circle-fill.svg"
-                alt="Favourite"
-              />
-            </a>
-          </div>
-        </li>
-      </ul>
+            <!--TODO play audio when song is clicked-->
+            <!--Add track to Favourites-->
+            <div
+              class="w-100 d-flex gap-2 justify-content-end align-items-center"
+            >
+              <a (click)="addToFavourites(track.id)" class="">
+                <img src="../../assets/images/heart.svg" alt="Favourite" />
+              </a>
+              <a (click)="play(track.preview_url)" class="">
+                <img
+                  src="../../assets/images/play-circle-fill.svg"
+                  alt="Favourite"
+                />
+              </a>
+              <a (click)="stop()" class="">
+                <img
+                  src="../../assets/images/pause-circle-fill.svg"
+                  alt="Favourite"
+                />
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
-    <!-- mt-5 border-0 bg-light -->
+
+    <!-- mt-5 border-0  -->
     <!-- <div > -->
     <!-- <div class="d-flex flex-column gap-0 justify-content-center mt-3"> -->
-    <div class="row border-top mt-5">
-      <div class="ms-3 w-75">
-        <p class="mb-0">
-          {{ album?.release_date | date : "MMMM d, y" }} <br />
-        </p>
-        <p class="mb-0" *ngIf="album?.total_tracks == 1">
-          {{ album?.total_tracks }} song<br />
-        </p>
+    <div class="row d-flex justify-content-center">
+      <div class="card mt-5 border-0 col-sm-12 col-md-8 col-lg-6">
+        <div class="ms-3 w-75">
+          <p class="mb-0">
+            {{ album?.release_date | date : "MMMM d, y" }} <br />
+          </p>
+          <p class="mb-0" *ngIf="album?.total_tracks == 1">
+            {{ album?.total_tracks }} song<br />
+          </p>
 
-        <p *ngIf="album?.total_tracks > 1" class="mb-0">
-          {{ album?.total_tracks }} songs
-        </p>
+          <p *ngIf="album?.total_tracks > 1" class="mb-0">
+            {{ album?.total_tracks }} songs
+          </p>
 
-        <p class="mb-0">
-          Current Popularity &#8226; Top {{ 100 - album?.popularity }}%<br />
-        </p>
-      </div>
-      <p class="mt-5 mb-0 ms-3">{{ album?.label }}<br /></p>
-      <div class="mt-0 ms-3" *ngFor="let copyright of album?.copyrights">
-        <p class="card-text font-weight-light">{{ copyright.text }}<br /></p>
+          <p class="mb-0">
+            Current Popularity &#8226; Top {{ 100 - album?.popularity }}%<br />
+          </p>
+        </div>
+        <p class="mt-5 mb-0 ms-3">{{ album?.label }}<br /></p>
+        <div class="mt-0 ms-3" *ngFor="let copyright of album?.copyrights">
+          <p class="card-text font-weight-light">{{ copyright.text }}<br /></p>
+        </div>
       </div>
     </div>
   </div>
