--- a/My_Music_App/src/app/new-releases/new-releases.component.html
+++ b/My_Music_App/src/app/new-releases/new-releases.component.html
@@ -1,11 +1,11 @@
 <div
   class="content d-flex flex-column align-items-center justify-content-center"
 >
-  <h1>New Releases</h1>
-  <div class="container-fluid">
-    <div class="row justify-content-center">
+  <h1 class="mt-3">New Releases</h1>
+  <div class="container-fluid d-flex justify-content-center">
+    <div class="row" style="width: 90%">
       <div
-        class="card mt-3 col-sm-6 col-md-4 col-lg-3 border-0"
+        class="card col-md-6 col-lg-3 border-0"
         *ngFor="let release of releases"
       >
         <!--TODO: add routing -->
@@ -17,31 +17,33 @@
             alt="album cover"
         /></a>
         <div class="card-body">
-          <h5 class="card-title">
-            {{ release.name }}
-          </h5>
-          <h6 class="cart-subtitle text-muted">New Release</h6>
-          <p class="card-text">
-            <strong>Release Date: </strong
-            >{{ release.release_date | date : "MM/dd/YYYY" }}<br />
-            <strong>Tracks: </strong>{{ release.total_tracks }}<br /><br />
+          <p class="card-title fw-bold fs-6">
+            <strong>{{ release.name }}</strong>
           </p>
-          <div class="d-flex gap-2" aria-label="Artist selection">
-            <!--TODO: add routing -->
 
+          <p class="cart-subtitle text-muted mb-0">
+            New Release<br />
+            Album &#8226; {{ release.release_date | date : "YYYY" }} <br />
+          </p>
+          <p *ngIf="release.total_tracks == 1">
+            {{ release.total_tracks }} song<br />
+          </p>
+
+          <p *ngIf="release.total_tracks > 1">
+            {{ release.total_tracks }} songs
+          </p>
+          <div class="d-flex gap-1 mt-1" aria-label="Artist selection">
             <a
+              *ngFor="let artist of release.artists"
+              class="font-weight-light badge bg-secondary"
               routerLink="/artist/{{ release.artists.id }}"
               routerLinkActive="active"
-              class="badge bg-primary"
-              *ngFor="let artist of release.artists"
             >
-              {{ artist.name }}</a
-            >
+              {{ artist.name }}
+            </a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<!-- routerLink="/artist/{{ artist.id }}" routerLink="/album/{{ release.id }}" -->
