refresh token when accestoken is expired

--- a/My_Music_App/src/app/about/about.component.html
+++ b/My_Music_App/src/app/about/about.component.html
@@ -1,1 +1,29 @@
-<p>about works!</p>
+<section class="about">
+  <div class="container-sm">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>About Us</h2>
+        <p>
+          Welcome to my Angular-based music discovery platform, where we connect
+          you to the world of music through the power of the Spotify API. Our
+          app is designed to offer you an immersive experience, allowing you to
+          explore new releases, discover albums, and connect with your favorite
+          artists seamlessly.<br />
+          At the heart of our application lies a custom authorization Node API.
+          We've crafted this API to ensure the highest standards of security and
+          functionality. Leveraging Redis server for JWT refresh tokens, we've
+          implemented a robust authentication system, prioritizing user privacy
+          and data protection. <br />
+          Furthermore, our application harnesses the flexibility and scalability
+          of MongoDB to manage user data and preferences efficiently. Your
+          favorite tracks are securely stored within our MongoDB database,
+          ensuring a personalized experience every time you use the app.
+          <br />
+          With a sleek Angular interface, our platform offers intuitive
+          navigation, allowing you to effortlessly browse through new releases,
+          explore albums, and delve into the diverse world of artists.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
