--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -98,6 +98,8 @@
     </div>
   </div>
 </nav>
+<!--end of navbar-->
+<!--start of main content-->
 <router-outlet></router-outlet>
 <!-- <app-about></app-about>
 <app-not-found></app-not-found> -->
