UI search paage/ artist page

--- a/My_Music_App/src/app/album/album.component.html
+++ b/My_Music_App/src/app/album/album.component.html
@@ -18,7 +18,7 @@
             <a
               routerLink="/artist/{{ leadArtistId }}"
               routerLinkActive="active"
-              class="fs-5 text-dark"
+              class="fs-5 text-dark text-decoration-none"
             >
               {{ leadArtistName }}</a
             >
