--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!-- make browser tab title New Releases -->
+<head>
+  <title>New Releases</title>
+</head>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">My Spotify Music</a>
