--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -63,11 +63,13 @@
                 >Favourites</a
               >
             </li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item">
+          <a routerLink="/about" routerLinkActive="active" class="nav-link"
+            >About</a
+          >
+        </li>
         <!--if email is signed in, show email, else, show link to register component-->
         <li class="nav-item">
           <a href="#" class="nav-link">
