--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">My Spotify Music</a>
+    <a class="navbar-brand" href="#">Dolma's Music</a>
 
     <button
       class="navbar-toggler"
