updated about page

--- a/My_Music_App/src/app/about/about.component.html
+++ b/My_Music_App/src/app/about/about.component.html
@@ -1,27 +1,35 @@
-<section class="about">
-  <div class="container-sm">
-    <div class="row">
-      <div class="col-md-6">
-        <h2>About Us</h2>
+<section class="about h-100 bg-light">
+  <div class="container-fluid h-100">
+    <div
+      class="h-25 about-header d-flex align-items-center justify-content-center fs-1"
+    >
+      <p>About</p>
+    </div>
+    <div class="d-flex align-items-center justify-content-center mt-4">
+      <div class="col-md-6 fs-6">
+        <h1 class="text-center">Welcome To My First Angular Web App</h1>
         <p>
-          Welcome to my Angular-based music discovery platform, where we connect
-          you to the world of music through the power of the Spotify API. Our
-          app is designed to offer you an immersive experience, allowing you to
-          explore new releases, discover albums, and connect with your favorite
-          artists seamlessly.<br />
-          At the heart of our application lies a custom authorization Node API.
-          We've crafted this API to ensure the highest standards of security and
-          functionality. Leveraging Redis server for JWT refresh tokens, we've
-          implemented a robust authentication system, prioritizing user privacy
-          and data protection. <br />
-          Furthermore, our application harnesses the flexibility and scalability
-          of MongoDB to manage user data and preferences efficiently. Your
-          favorite tracks are securely stored within our MongoDB database,
-          ensuring a personalized experience every time you use the app.
-          <br />
-          With a sleek Angular interface, our platform offers intuitive
-          navigation, allowing you to effortlessly browse through new releases,
-          explore albums, and delve into the diverse world of artists.
+          Welcome to my Angular-based music discovery platform, where I connect
+          users to a world of music using the Spotify API. My app offers an
+          immersive experience for exploring new releases, discovering albums,
+          and artists seamlessly.
+        </p>
+
+        <p>
+          At the core of my application is a custom authorization Node API that
+          prioritizes top-tier security and functionality. I've developed this
+          API to ensure the utmost protection of user data, leveraging Redis
+          server for JWT refresh tokens for a robust authentication system.
+        </p>
+        <p>
+          Additionally, I've utilized MongoDB for efficient management of user
+          data and preferences. Users' favorite tracks are securely stored in my
+          MongoDB database, providing a personalized experience each time the
+          app is used.
+        </p>
+        <p>
+          Check out the github page at
+          https://github.com/DolmaBhuti/My_Music_App.
         </p>
       </div>
     </div>
