--- a/My_Music_App/src/app/app.component.html
+++ b/My_Music_App/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Dolma's Music</a>
+    <a class="navbar-brand ms-3" href="#">Dolma's Music</a>
 
     <button
       class="navbar-toggler"
@@ -70,21 +70,31 @@
             >About</a
           >
         </li>
-        <!--if email is signed in, show email, else, show link to register component-->
         <li class="nav-item">
           <a href="#" class="nav-link">
             <img src="../assets/images/person.svg" alt="person icon" />
             {{ email }}
           </a>
         </li>
-        <!--if email is signed in, show log out link, else, show link to login component-->
-
         <li class="nav-item">
           <a class="nav-link" (click)="logout()">Log Out</a>
         </li>
       </ul>
 
-      <ul class="navbar-nav w-100 justify-content-end" *ngIf="!email">
+      <!-- <ul class="navbar-nav w-100 justify-content-end" *ngIf="!email"> -->
+      <ul
+        class="nav me-auto mb-2 mb-lg-0 w-100 justify-content-end"
+        *ngIf="!email"
+      >
+        <li class="nav-item me-2">
+          <a
+            routerLink="/about"
+            routerLinkActive="active"
+            class="nav-link text-dark"
+            >About</a
+          >
+        </li>
+
         <li class="nav-item gap-2">
           <a
             routerLink="/login"
