--- a/My_Music_App/src/app/about/about.component.html
+++ b/My_Music_App/src/app/about/about.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="d-flex align-items-center justify-content-center mt-4">
       <div class="col-md-6 fs-6">
-        <h1 class="text-center">Welcome To My First Angular Web App</h1>
+        <h1 class="text-center">About Me</h1>
         <p>
           Welcome to my Angular-based music discovery platform, where I connect
           users to a world of music using the Spotify API. My app offers an
